minor changes in markdown

--- a/notebooks/2.categorical_variable_encoding/8. WoE.ipynb
+++ b/notebooks/2.categorical_variable_encoding/8. WoE.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Weight of evidence \n",
+    "# Weight of Evidence \n",
     "\n",
     "**Definition**  \n",
-    "Weight of Evidence (WoE) is a method of replacing categorical variables (or binned continuous variables) with continuous values that represent their importance (or weight of evidence) of the variables in separating the target variable. This can be used for binary classification.   \n",
+    "Weight of Evidence (WoE) is a method of converting categorical variables (or binned continuous variables) into continuous values that represent the importance (or weight of evidence) of the variables in predicting the target variable. This can be used for binary classification.   \n",
     "\n",
-    "WoE is coming from the credit and financial industry where it was important to find an indicator of 'how good' a customer or customer group is when it comes to pay back a loan (i.e. risk of loan default).  \n",
+    "The WoE is coming from the credit and financial industry to calculate a measure of 'how good' a customer group is when it comes to paying back a loan (i.e. evaluating the risk of loan default).  \n",
     "\n",
     "\n",
     "$$ WoE = \\ln \\frac{\\text{Proportion of good events}}{\\text{Proportion of bad events}}$$\n",
     "\n",
     "where, \n",
-    "* Proportion of good events: sum of good events per category/ total good events\n",
-    "* Proportion of bad events: sum of bad events per category/ total bad events\n",
+    "* Proportion of good events: count of good events per category/ total good events\n",
+    "* Proportion of bad events: count of bad events per category/ total bad events\n",
     "\n",
     "**How to calculate**  \n",
     "1. Calculate the count of good events and bad events in each category, as well as the total number of good events and bad events.\n",
     "2. Calculate the proprtion (relative frequency) of good events per each category compared to the total good events. Do the same thing for bad events. \n",
-    "3. Calculate the log of the ratio between the proportion of good events and the proportion of bad events. \n",
+    "3. Calculate the log of the proportion of good events divided by the proportion of bad events. \n",
     "\n",
     "\n",
     "![woe_example](images/weight_of_evidence_example.png)\n",
@@ -30,7 +30,7 @@
     "\n",
     "\n",
     "**Interpretation**\n",
-    "- The second step, calculating the proportion of good events and bad events per each category, is to compensate the imbalanced observation counts for good events and bad events. e.g. If there are much more good events than bad events, simply comparing good events and bad events within a category won't tell the truth of how good the category is when it comes to predicting the target event.\n",
+    "- The second step, calculating the proportion of good events and bad events per each category, is to compensate the imbalanced observations of good events and bad events. For example, if there are more good events than bad events, simply comparing the count of good events and bad events within a category won't tell us how good the category is when it comes to predicting the target event.\n",
     "- The third step would tell us how different the frequencies of good events and bad events are in a category, which means how important this category is when predicting the target variable. \n",
     "    - If P(Good) > P(Bad), then the WoE will be > 0. This means the category is more likely to have good events. \n",
     "    - If P(Bad) > P(Good), then the WoE will be < 0. This means the category is more likely to have bad events.\n",
@@ -38,12 +38,12 @@
     "\n",
     "\n",
     "**Advantages** \n",
-    "- It sets a monotonic relationship between the independent variable the target variable. This comes handy when finding the correlation between indepdent variable and depedent variable. Also, monotonic data helps avoid overfitting when training a model. \n",
+    "- It sets a monotonic relationship between the independent variable the target variable. This comes handy when finding the correlation between the indepdent variable and the target variable. Also, monotonic data helps avoid overfitting when training a model. \n",
     "- It is well suited for logistic regression as it orders the categories on a logistic scale which is natural for logistic regression.\n",
     "\n",
     "**Limitations**\n",
     "- It may lead to over-fitting \n",
-    "- Loss of information when bining data into few categories or when different categories have the same WoE. \n",
+    "- Loss of information when binning data into few categories or when different categories have the same WoE. \n",
     "\n",
     "\n",
     "**Further reading** \n",
