--- a/notebooks/2.categorical_variable_encoding/1.one-hot-encoding.ipynb
+++ b/notebooks/2.categorical_variable_encoding/1.one-hot-encoding.ipynb
@@ -1,6 +1,34 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# One Hot Encoding \n",
+    "\n",
+    "* **Definition**\n",
+    "  * encoding each categorical variable with a set of boolean variables indicating if a category is present for each observation\n",
+    "    ![](images/one_hot_encoding_example.png)\n",
+    "  * More common alternative: one hot encoding into k-1variables, where k is the number of distinct categories = 1 less dimension and still present the same information\n",
+    "  * When to use k variables: \n",
+    "    * tree-based algorithms. \n",
+    "      * tree-based algorithms do not take all the variables into account at the same time. They select random selection of features --> Some categories will not be used.\n",
+    "    * when doing feature selection by recursive algorithms \n",
+    "      * evaluate feature importance one at a time \n",
+    "    * when interested in determining the importance of each single category \n",
+    "* **Advantages**\n",
+    "\n",
+    "  * Makes no assumption about the distribution or categories of the categorical variable\n",
+    "  * Keeps all the information of the categorical variable\n",
+    "  * Suitable for linear models \n",
+    "* **Limitations**\n",
+    "\n",
+    "  * Expands the feature space\n",
+    "  * Does not add extra information while encoding \n",
+    "  * Many dummy variables may be identical, introducing redundant information "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
