--- a/notebooks/2.categorical_variable_encoding/1.one-hot-encoding.ipynb
+++ b/notebooks/2.categorical_variable_encoding/1.one-hot-encoding.ipynb
@@ -1608,7 +1608,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# (1) One hot encoding with sklearn "
+    "# (2) One hot encoding with sklearn (recommended)"
    ]
   },
   {
