add intro to imputation

--- a/notebooks/1.missing_data_imputation/missing_data_imputation_summary_1.ipynb
+++ b/notebooks/1.missing_data_imputation/missing_data_imputation_summary_1.ipynb
@@ -4,31 +4,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Missing Data Imputation\n",
-    "\n",
-    "**Why do we care about missing data?**\n",
-    "- They are inevitable in data collection \n",
-    "- Some models can handle missing data (e.g. XGBoost) but some don't (e.g. linear regression)\n",
-    "- We need to handle missing data: 1) remove an entire observation that contains missing value, 2) remove entire variable if there is any missing value, 3) replace missing value with some estimation \n",
-    "- Usually we do not want to remove data even if some fields are missing becuase the rest of fields can still be informative\n",
-    "- So, we need to find a way to impute (replace with some estimation) missing data \n",
+    "# Missing Data Imputation Using sklearn\n",
     "\n",
     "\n",
-    "**What are the options?**\n",
+    "# Why does missing data matter? \n",
+    "If you ever worked on raw data collected from a survey or sensors that is not cleaned yet, you might have also faced missing data. Let's think about a dataset of age, gender, and height as below. You want to use both age and gender to predict height, but you have some data points that either have only age or only gender. What would you do in this case?\n",
+    "\n",
+    "|   | age| gender| height|\n",
+    "|---|----|-------|-------|\n",
+    "|  0|  20|     F |   5'4\"|\n",
+    "|  1|  31|     M |   6'1\"|\n",
+    "|  2|  40|       |   5'0\"|\n",
+    "|  3|    |     M |   5'6\"|\n",
+    "\n",
+    "\n",
+    "When certain fields are missing in an observation, you either 1) remove the entire observation or 2) keep the observation and replace the missing values with some estimation. Analyzing with complete data after removing any missing data is called **Complete Case Analysis (CCA)** and replacing missing values with estimation is called **missing data imputation**.\n",
+    "\n",
+    "Normally, you don't want to remove the entire observation because the rest of fields can still be informative. Also, when you have lots of varaiables that are missing in different observations, the chances are you will have to remove the majority of data points and end up being left with limited data to train a model. Even if you manage to build a model, the model will have to know how to handle missing data in production, otherwise it will freak out and refuse to make any prediction for a new data with missing field!\n",
+    "\n",
+    "Therefore, we would want to perform missing data imputation and this post is about how we can do that in Python.\n",
+    "\n",
+    "\n",
+    "# What are the options for missing data imputation?\n",
+    "\n",
+    "There are many imputation methods available and there are pros and cons in each. \n",
     "\n",
     "1. Univariate methods \n",
-    "    - Numerical: mean, median, arbitrary value out of distribution\n",
-    "    - categorical: mode (most frequent category), arbitrary value (\"missing\" category)\n",
-    "    - Both: random value\n",
+    "    - Numerical\n",
+    "        - mean, median, mode (most frequent value), arbitrary value (out of distribution) \n",
+    "        - For time series: linear interpolation, last observation carried forward, next observation carried backward\n",
+    "    - Categorical\n",
+    "        - mode (most frequent category), arbitrary value (e.g. \"missing\" category)\n",
+    "    - Both\n",
+    "        - random value selected from train data separately for each missing data\n",
+    "        \n",
+    "\n",
     "2. Multi-variable methods \n",
     "    - KNN\n",
     "    - Regression\n",
-    "3. Adding missing indicator \n",
-    "    - adding 'variable_NA' for each variable with missing data\n",
+    "    - Chained equation\n",
     "\n",
-    "**What is the best missing data imputation method?**\n",
-    "- It depends on the dataset\n",
-    "- We need to use cross validation to find the best approach"
+    "\n",
+    "3. Adding missing indicator \n",
+    "    - Adding boolean value to indicate the observation has missing data or not. It is used with one of the above methods. \n",
+    "\n",
+    "\n",
+    "Although they are all useful in one way or another, in this post, we will focus on 6 major imputation techniques which are available in sklearn: mean, median, mode, arbitrary, KNN, adding missing indicator. In the next post, we will learn why we choose sklearn for our missing imputation.\n",
+    "\n",
+    "\n",
+    "For more, you can find more resources;\n",
+    "- [6 Different Ways to Compensate for Missing Values In a Dataset (Data Imputation with examples)](https://towardsdatascience.com/6-different-ways-to-compensate-for-missing-values-data-imputation-with-examples-6022d9ca0779)\n",
+    "- [Handle Missing Values in Time Series For Beginners](https://www.kaggle.com/juejuewang/handle-missing-values-in-time-series-for-beginners)"
    ]
   },
   {
@@ -493,7 +519,7 @@
    ],
    "source": [
     "# categorical vs. numerical columns \n",
-    "cat_cols = df.select_dtypes('object').columns\n",
+    "cat_cols = df.drop('SalePrice', axis=1).select_dtypes('object').columns\n",
     "num_cols = df.drop('SalePrice', axis=1).select_dtypes('number').columns\n",
     "\n",
     "print(f\"Number of categorical columns: {len(cat_cols)}\")\n",
@@ -1430,13 +1456,6 @@
    ],
    "source": [
     "X_train_missing_impute.head()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Random"
    ]
   },
   {
