--- a/notebooks/1.missing_data_imputation/missing_data_imputation_summary_2.ipynb
+++ b/notebooks/1.missing_data_imputation/missing_data_imputation_summary_2.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "First of all, what do I mean by transformer and estimator? \n",
     "\n",
-    "Second, what do I mean mean parallel vs. sequential? "
+    "Second, what do I mean by parallel vs. sequential? "
    ]
   },
   {
@@ -28,7 +28,7 @@
    "source": [
     "# Prepare data\n",
     "\n",
-    "Let's first prepare the [house price data from Kaggle](https://www.kaggle.com/c/house-prices-advanced-regression-techniques/data) we used in the previous post. Do not forget to split the data into train and test sets before performing any feature engineering steps!"
+    "Let's first prepare the [house price data from Kaggle](https://www.kaggle.com/c/house-prices-advanced-regression-techniques/data) we will be using in this post. It is the same data used in the previous post as well. Do not forget to split the data into train and test sets before performing any feature engineering steps!"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "source": [
     "# Pipeline\n",
     "\n",
-    "Now that we have the data ready, let's say we want to train a model using Lasso regression that predicts `SalePrice` using the variables we have. Instead of using all of the 79 variables, let's use only numerical variables this time. We already know there is plenty of missing data in some columns as we saw in the previous post (e.g. `LotFrontage`, `MasVnrArea`, and `GarageYrBlt` among numerical columns), we definitely want to perform missing data imputation before fitting a model. Also, let's say we also want to scale the data using `StandardScaler`. The following is what we would do normally:"
+    "Now that we have the data ready, let's say we want to train a model using Lasso regression that predicts `SalePrice` using the variables we have. Instead of using all of the 79 variables, let's use only numerical variables this time (we will include the categorical variables in the next section). We already know there is plenty of missing data in some columns as we saw in the previous post (e.g. `LotFrontage`, `MasVnrArea`, and `GarageYrBlt` among numerical columns), we definitely want to perform missing data imputation before fitting a model. Also, let's say we also want to scale the data using `StandardScaler`. The following is what we would do normally:"
    ]
   },
   {
@@ -119,14 +119,14 @@
     "\n",
     "# missing data imputation\n",
     "imputer = SimpleImputer(strategy='mean')\n",
-    "X_impute = imputer.fit_transform(X_temp)\n",
-    "X_impute = pd.DataFrame(X_impute, columns=X_temp.columns)\n",
+    "X_impute = imputer.fit_transform(X_temp)  # np.ndarray\n",
+    "X_impute = pd.DataFrame(X_impute, columns=X_temp.columns)  # pd.DataFrame\n",
     "\n",
     "\n",
     "# scale data \n",
     "scaler = StandardScaler()\n",
-    "X_scale = scaler.fit_transform(X_impute)\n",
-    "X_scale = pd.DataFrame(X_scale, columns=X_temp.columns)\n",
+    "X_scale = scaler.fit_transform(X_impute)  # np.ndarray\n",
+    "X_scale = pd.DataFrame(X_scale, columns=X_temp.columns)  # pd.DataFrame\n",
     "\n",
     "# fit model \n",
     "lasso = Lasso()\n",
@@ -138,9 +138,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This is great but we have to pass the output of the first step (`SimpleImputer`) to the second step (`StandardScaler`) as an input. And then, the output of the second step (`StandardScaler`) is passed to the third step (`Lasso`) as an input. If we have more feature engineering steps, it will be more confusing to handle different inputs and outputs. So, here comes Pipeline to the rescue!\n",
+    "This is great but there are manual steps for moving transformed data: we have to pass the output of the first step (`SimpleImputer`) to the second step (`StandardScaler`) as an input. And then, the output of the second step (`StandardScaler`) is passed to the third step (`Lasso`) as an input. If we have more feature engineering steps, it will be more complex to handle different inputs and outputs. So, here comes Pipeline to the rescue!\n",
     "\n",
-    "**Pipeline is a class with wich you can put transformers and an estimator (model) together as sequential steps**. You just need to pass a list of tuples of steps in this order: (step_name, transformer or estimator object)"
+    "**Pipeline is a class with wich you can put transformers and an estimator (model) together as sequential steps**. You just need to pass a list of tuples of steps in this order: (step_name, transformer or estimator object). Let's rewrite the same flow abouve in Pipeline."
    ]
   },
   {
@@ -172,7 +172,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Great! We saved a lot more lines and it looks much cleaner! As you can see, Pipeline passes the first step's output to the next step as its input, meaning **`Pipeline` is sequential**."
+    "Great! We saved a lot more lines and it looks much cleaner! As you can see, **Pipeline passes the first step's output to the next step as its input, meaning Pipeline is sequential**."
    ]
   },
   {
@@ -181,12 +181,12 @@
    "source": [
     "# ColumnTransformer\n",
     "\n",
-    "Now let's go back to our original dataset where we have both numerical and categorical variables. Can we put these things together like we just did? "
+    "Now let's go back to our original dataset where we have both numerical and categorical variables. Because we cannot apply mean imputation to categorical variables, we decide to use mode imputation for categorical variables and mean imputation for numerical imputation. Okay, then can we do something like this?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,16 +194,20 @@
     "                 ('cat_imputer', SimpleImputer(strategy='most_frequent')),\n",
     "                 ('lasso', Lasso())])\n",
     "\n",
-    "# this throws an error \n",
-    "# pipe.fit(X_train, y_train)\n",
-    "# pipe.score(X_train, y_train)"
+    "# pipe.fit throws an error\n",
+    "# ------\n",
+    "# ValueError: Cannot use mean strategy with non-numeric data:\n",
+    "# could not convert string to float: 'RL'\n",
+    "# ------\n",
+    "\n",
+    "# pipe.fit(X_train, y_train)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No! When `pipe` fits `SimpleImputer(strategy='mean')` to X_train, which has both numerical and categorical, it fails because `SimpleImputer(strategy='mean')` can only apply to numerical variables. So, we need to let our pipeline know that we want to apply mean imputation to only numerical variables and most_frequent imputation to categorical variables. \n",
+    "Unfortunately, no! When `pipe` fits `SimpleImputer(strategy='mean')` to X_train, which has both numerical and categorical, it fails because `SimpleImputer(strategy='mean')` can only apply to numerical variables. So, we need to let our pipeline know that we want to apply mean imputation to only numerical variables and most_frequent imputation to categorical variables. \n",
     "\n",
     "How do we do that? With `ColumnTransformer`! \n",
     "\n",
