feature scaling intro

--- a/notebooks/6.feature_scaling/feature_scaling.ipynb
+++ b/notebooks/6.feature_scaling/feature_scaling.ipynb
@@ -13,35 +13,38 @@
    "source": [
     "# Why Do We Need Scaling?\n",
     "\n",
-    "Different features need to be roughly in the same range. \n",
     "\n",
-    "Feature magnitude matters \n",
+    "Features on a different scale is a common issue data scientists face. Some algorithms can handle it but some don't and if not scaled properly beforehand, they will have a hard time finding the optimal solution for the problem. So, why does it matter and how can we scale them?\n",
     "\n",
-    "* The regression coefficient is directly influenced by the scale of the variable \n",
-    "* Variables with bigger magnitude/value range dominate over the ones with smaller magnitude/value range \n",
-    "* Gradient descent converges faster when features are on similar scale\n",
-    "  * Different scale --> different step size for each feature --> not move smoothly --> takes longer to converge\n",
-    "* Feature scaling helps decrease the time to find support vectors for SVMs \n",
-    "* Euclidean distance are sensitive to feature magnitude \n",
-    "* Some algorithms, like PCA, require the features to be centered at 0\n",
-    "  * When we initialize the weights of multi-layer perceptron with tanh activation units to 0 or small random values centered around zero, we want to update the model weights equally.\n",
-    "  \n",
-    "  \n",
+    "First, let's see why it matters. For KNN, for example, which uses Euclidean distance to determine the similarity between points, features with bigger magnitude will dominate over the ones with smaller magnitude. In Gradient Descent, features on a different scale will have different step size and it will take longer time to converge as shown below.\n",
     "\n",
-    "Algorithms sensitive to magnitude \n",
     "\n",
-    "* Machine Learning Models affected by the magnitude of the feature\n",
-    "  * Algorithms that use Gradient Descent as an optimization technique \n",
-    "    * Linear and Logistic Regression\n",
+    "<br>\n",
+    "<div style=\"text-align:center\">\n",
+    "<img src=\"images/scaling.png\" width=\"60%\">\n",
+    "<figcaption> <a href=\"https://stackoverflow.com/a/46688787/9449085\">Image source</a> </figcaption>\n",
+    "\n",
+    "</div>\n",
+    "<br>\n",
+    "\n",
+    "The almost only exception is tree-based algorithms that use Gini impurity or information gain which are not influenced by feature scale. Here are the summary of machine learning models:\n",
+    "\n",
+    "**ML Models sensitive to feature scale**\n",
+    "\n",
+    "* Algorithms that use Gradient Descent as an optimization technique \n",
+    "    * Linear and Logistic Regression (may not use Gradient Descent)\n",
     "    * Neural Networks \n",
-    "  * Distance-based algorithms that use distance for determining similarity \n",
+    "* Distance-based algorithms\n",
     "    * Support Vector Machines \n",
     "    * KNN\n",
     "    * K-means clustering\n",
-    "  * Finding directions of maximizing the variance (?)\n",
+    "* Finding directions of maximizing the variance\n",
     "    * Linear Discriminant Analysis (LDA)\n",
     "    * Principal Component Analysis (PCA)\n",
-    "* not sensitive: tree-based algorithms (rule-based)\n",
+    "    \n",
+    "    \n",
+    "**ML models not sensitive to feature scale**\n",
+    "* Tree-based algorithms\n",
     "  * Classification and Regression Trees \n",
     "  * Random Forest \n",
     "  * Gradient Boosted Trees\n"
@@ -52,7 +55,9 @@
    "metadata": {},
    "source": [
     "# Standardization vs. Normalization\n",
-    "Two types depending on its focus: 1) making data more like normal distribution (mean=0, std=1), 2) scaling data to be within fixed range.\n",
+    "The next question is \"how can we scale features?\"\n",
+    "\n",
+    "There are two types of scaling techniques depending on its focus: 1) making data more like normal distribution (mean=0, std=1), 2) scaling data to be within fixed range.\n",
     "\n",
     "There are mixed use of terms but I will stick to 'standardization' for the first category and 'normalization' for the second category. \n",
     "\n",
@@ -859,30 +864,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "heading_collapsed": true
+   },
+   "source": [
+    "# Appendix"
+   ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "# Appendix\n",
     "## Scaling to vector unit length"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "Divide each feature vector by either Manhattan distance or Euclidean distance \n",
     "* Manhattan distance (L1 norm)\n",
@@ -894,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -922,7 +927,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [
     {
      "data": {
@@ -956,7 +963,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "# # outlier clipping\n",
