standardization vs normalization

--- a/notebooks/6.feature_scaling/feature_scaling.ipynb
+++ b/notebooks/6.feature_scaling/feature_scaling.ipynb
@@ -14,15 +14,15 @@
     "# Why Do We Need Scaling?\n",
     "\n",
     "\n",
-    "Features on a different scale is a common issue data scientists face. Some algorithms can handle it but some don't and if not scaled properly beforehand, they will have a hard time finding the optimal solution for the problem. So, why does it matter and how can we scale them?\n",
+    "Features on a different scale is a common issue data scientists face. Some algorithms can handle it but some don't and if not scaled properly beforehand, they will have a hard time finding the optimal solution. So, why does it matter and how can we solve it?\n",
     "\n",
-    "First, let's see why it matters. For KNN, for example, which uses Euclidean distance to determine the similarity between points, features with bigger magnitude will dominate over the ones with smaller magnitude. In Gradient Descent, features on a different scale will have different step size and it will take longer time to converge as shown below.\n",
+    "First, let's see why it matters. In KNN, for example, which uses Euclidean distance to determine the similarity between points, features with bigger magnitude will influence much more on the distance than the ones with smaller magnitude. In gradient descent, features on a different scale will have different step size and it will take longer time to converge as shown below.\n",
     "\n",
     "\n",
     "<br>\n",
     "<div style=\"text-align:center\">\n",
     "<img src=\"images/scaling.png\" width=\"60%\">\n",
-    "<figcaption> <a href=\"https://stackoverflow.com/a/46688787/9449085\">Image source</a> </figcaption>\n",
+    "<figcaption> Gradient descent without scaling (left) and with scaling (right) (<a href=\"https://stackoverflow.com/a/46688787/9449085\">Image source</a>) </figcaption>\n",
     "\n",
     "</div>\n",
     "<br>\n",
@@ -38,7 +38,7 @@
     "    * Support Vector Machines \n",
     "    * KNN\n",
     "    * K-means clustering\n",
-    "* Finding directions of maximizing the variance\n",
+    "* Algorithms that find directions that maximize the variance\n",
     "    * Linear Discriminant Analysis (LDA)\n",
     "    * Principal Component Analysis (PCA)\n",
     "    \n",
@@ -55,22 +55,13 @@
    "metadata": {},
    "source": [
     "# Standardization vs. Normalization\n",
-    "The next question is \"how can we scale features?\"\n",
+    "So then how can we scale features? There are two types of scaling techniques depending on their focus: 1) standardization and 2) normalization.\n",
     "\n",
-    "There are two types of scaling techniques depending on its focus: 1) making data more like normal distribution (mean=0, std=1), 2) scaling data to be within fixed range.\n",
+    "**Standardization** focuses on scaling the **_variance_** in addition to shifting the center to 0. It comes from the standardization in statistics, which converts a variable into $z-{score}$ that represents the number of standard deviations away from the mean no matter what the original value was.\n",
     "\n",
-    "There are mixed use of terms but I will stick to 'standardization' for the first category and 'normalization' for the second category. \n",
+    "**Normalization** focuses on scaling the **_min-max range_** rather than variance. For example, the original value range of [100, 200] is simply scaled to be [0, 1] by substracting the minimum and dividing by the range. This is called 'min-max normalization'. There are a few variations of normalization depending on whether to center data and what range to use: 1) min-max normalization, 2) max-abs normalization, 3) mean normalization, and 4) median-quantile normalization. \n",
     "\n",
-    "Review 4 different types of scalers; 1 for standardization and 3 for normalization techniques.  \n",
-    "\n",
-    "| Category |Standardization | Min-max Normalization | Mean Normalization | Median-quantile Nromalization|\n",
-    "|--|--|--|--|--|\n",
-    "| Concepts | Centering + Unit Variance| Fixed Range | Centering + Fixed Range | Centering + Fixed Quantile Range|\n",
-    "| Definition | Convert data to have zero mean and unit variance | Convert data to be within fixed range (e.g. [0, 1]) | Convert data to have zero mean and be within fixed range (e.g. [-1, 1]) | Convert data to have zero median and unit interquantile range |\n",
-    "\n",
-    "\n",
-    "There are pros and cons in each method. In this post, I would like to walk you through definition and characteristics of each method, as well as how to apply them in Python.\n",
-    "\n"
+    "Each scaling method has its own advantages and limitations and there is no hard and fast rule that one method applies to any situation. Therefore, we would want to understand each method, implement them, and see which one works best for our own problem. In the remaining sections of this post, I will walk you through all of scaling methods.\n"
    ]
   },
   {
